--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
         "Alla",
+        "fontawesome",
         "Nazdravlje",
         "Prost",
+        "stylesheet",
+        "wtmplt",
         "zdravje"
     ]
 }
