--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,20 @@
 {
     "cSpell.words": [
+        "'e",
         "Alla",
+        "apos",
+        "ddd'e",
+        "Eddd",
         "fontawesome",
+        "htmlescape",
         "Nazdravlje",
+        "onmouseover",
         "Prost",
+        "replacen",
+        "stmplt",
         "stylesheet",
+        "tagname",
+        "tmplt",
         "wtmplt",
         "zdravje"
     ]
