--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "dev_bestia_html_templating"
 version = "0.1.41"
 description = "Templating library for html in fullstack Rust, server-side or client-side in wasm"
 authors = ["bestia.dev"]
+homepage = "https://bestia.dev"
 edition = "2018"
 license = "MIT"
 readme = "README.md"
