--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "'e",
         "Alla",
         "apos",
+        "bestia",
+        "crev",
         "ddd'e",
         "Eddd",
         "fontawesome",
@@ -15,7 +17,9 @@
         "stmplt",
         "stylesheet",
         "tagname",
+        "templating",
         "tmplt",
+        "webassembly",
         "wtmplt",
         "zdravje"
     ]
