--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/bestia-dev/dev_bestia_html_templating"
+# Allowed categories are listed here <https://crates.io/category_slugs>
 categories = ["web-programming::http-server"]
 # Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
 keywords = ["server", "http"]
